--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -19,14 +19,19 @@
     </nav>
   </header>
   <head class="iets"> </head>
-  <main class="full-width">
+  <main>
     <section class="content">
-      <h2>Mijn Portofolio</h2>
-      <h3>Motievatie</h3>
-      <p> Ik ben gepassioneerd door technologie en het creëren van nieuwe dingen met code. Mijn projecten, zoals het maken van games en het bouwen van een website, geven me veel voldoening en motivatie om door te leren. Ik vind het geweldig om problemen op te lossen en nieuwe ideeën werkelijkheid te maken. Door mijn opleiding als software developer wil ik mijn vaardigheden blijven verbeteren en meer projecten realiseren. </p>
-    </section>
+        <h2>Mijn Projecten</h2>
+        <h3>Projecten</h3>
+        <h4>Mijn projecten die ik gemaakt heb zijn Hoger en lager, ZeeSlag en nu ben ik bezig met een website bouwen waar je computer part kan kopen.
+          Ik ben ook bezig met keuzedeel daar maak ik een 3d doolhof horror game.
+        </h4>
+      </section>
+      <section class="sidebar">
+        <h3>Mijn projecten:</h3>
+        <p>Hoger Lager Zee slag en een Website bouwen</p>
+      </section>
   </main>
-
   
   <footer>
     <p>&copy; 2025 Mijn Website</p>
