--- a/portofolio/about.html
+++ b/portofolio/about.html
@@ -14,6 +14,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">Over mij</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="Projecten.html">Projecten</a></li>
       </ul>
     </nav>
   </header>
