--- a/portofolio/contact.html
+++ b/portofolio/contact.html
@@ -19,14 +19,17 @@
     </nav>
   </header>
   <head class="iets"> </head>
-  <main class="full-width">
+  <main>
     <section class="content">
-      <h2>Mijn Portofolio</h2>
-      <h3>Motievatie</h3>
-      <p> Ik ben gepassioneerd door technologie en het creëren van nieuwe dingen met code. Mijn projecten, zoals het maken van games en het bouwen van een website, geven me veel voldoening en motivatie om door te leren. Ik vind het geweldig om problemen op te lossen en nieuwe ideeën werkelijkheid te maken. Door mijn opleiding als software developer wil ik mijn vaardigheden blijven verbeteren en meer projecten realiseren. </p>
+    <h2>Mijn contact Pagina</h2>
+    <h3>Je kan mij contacten op <a href="www.gmail.com">rayenbisai@gmail.com</a> of 0639204883.</h3>
+
+    </section>
+    <section class="sidebar">
+      <h3>Mijn projecten:</h3>
+      <p>Hoger Lager Zee slag en een Website bouwen</p>
     </section>
   </main>
-
   
   <footer>
     <p>&copy; 2025 Mijn Website</p>
