img en media query

--- a/portofolio/contact.html
+++ b/portofolio/contact.html
@@ -19,15 +19,12 @@
     </nav>
   </header>
   <head class="iets"> </head>
-  <main>
+  <main class="full-width">
     <section class="content">
     <h2>Mijn contact Pagina</h2>
     <h3>Je kan mij contacten op <a href="www.gmail.com">rayenbisai@gmail.com</a> of 0639204883.</h3>
 
     </section>
-    <section class="sidebar">
-      <h3>Mijn projecten:</h3>
-      <p>Hoger Lager Zee slag en een Website bouwen</p>
     </section>
   </main>
   
