--- a/portofolio/contact.html
+++ b/portofolio/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welkom op mijn Portofolio</h1>
+    <h1>Contact</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
