--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -26,6 +26,8 @@
         <h4>Mijn projecten die ik gemaakt heb zijn Hoger en lager, ZeeSlag en nu ben ik bezig met een website bouwen waar je computer part kan kopen.
           Ik ben ook bezig met keuzedeel daar maak ik een 3d doolhof horror game.
         </h4>
+       <img class="img" src="/img/Schermafbeelding 2025-03-03 135139.png" alt="">
+       <img class="img" src="/img/Schermafbeelding 2025-03-03 135231.png" alt="">
       </section>
       <section class="sidebar">
         <h3>Mijn projecten:</h3>
