--- a/portofolio/about.html
+++ b/portofolio/about.html
@@ -22,9 +22,7 @@
   <main>
     <section class="content">
       <h2>Wie ben ik?</h2>
-      <p>Mijn naam is Rayen bisai en ik woon bij mijn ouders samen met mijn twee broers en mijn zus. In mijn vrije tijd ben ik veel bezig met manga lezen, gamen en coderen. Manga lezen helpt me echt te ontspannen en even in een andere wereld te duiken. Gamen is ook iets waar ik van geniet; het is een leuke manier om te ontspannen en tegelijkertijd mijn strategisch inzicht te verbeteren. 
-
-        Daarnaast ben ik al een tijdje bezig met coderen. Het is iets waar ik veel plezier in heb, en ik leer er steeds meer over. In mijn opleiding Software Developer heb ik al een aantal projecten gedaan. Zo heb ik een game gemaakt, zoals "Hoger Lager" en "Zeeslag". Momenteel ben ik bezig met een nieuw project: een website waar je zelf een pc kunt samenstellen en kopen. </p>
+      <p class="about">Ik heb een sterke passie voor technologie en het ontwikkelen van innovatieve oplossingen met behulp van programmeren. Mijn projecten, waaronder het ontwerpen van games en het bouwen van een website, bieden mij aanzienlijke voldoening en inspireren mij om mijn kennis verder uit te breiden. Ik ben gefascineerd door het oplossen van problemen en het concretiseren van nieuwe ideeën. Door mijn opleiding tot softwareontwikkelaar streef ik ernaar mijn vaardigheden continu te verbeteren en meer projecten te realiseren. </p>
     </section>
     <section class="sidebar">
       <h3>Mijn hobby's:</h3>
@@ -33,6 +31,10 @@
         <li>Gamen</li>
         <li>Coderen</li>
       </ul>
+    </section>
+    <section class="content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat dolore possimus reiciendis ducimus ab. Odio assumenda quasi nam et magni, illo repudiandae enim eaque? Iste enim aspernatur vitae cum autem!
+      s
     </section>
   </main>
   
