projecten.php gefixed

--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -27,11 +27,14 @@
           Ik ben ook bezig met keuzedeel daar maak ik een 3d doolhof horror game.
         </h4>
        <img class="img" src="/img/Schermafbeelding 2025-03-03 135139.png" alt="">
+       <p>Een game waar je tegen een computer moet spelen en zijn boten moet vernietegen om te winnen</p>
        <img class="img" src="/img/Schermafbeelding 2025-03-03 135231.png" alt="">
+       <p>een game waar je  hoger of lager kan gokken</p>
+       <img class="img" src="/img/Schermafbeelding 2025-04-03 141822.png" alt="">
       </section>
       <section class="sidebar">
         <h3>Mijn projecten:</h3>
-        <p>Hoger Lager Zee slag en een Website bouwen</p>
+        <p>Hoger Lager, Zee slag en Review your experience</p>
       </section>
   </main>
   
