ik heb de code verandert zodat het bootstrap gebruikt

--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -4,44 +4,77 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mijn Website</title>
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Projecten</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Over mij</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="Projecten.html">Projecten</a></li>
-      </ul>
-    </nav>
-  </header>
-  <head class="iets"> </head>
-  <main>
-    <section class="content">
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Mijn Portofolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="Projecten.html">Projecten</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container my-4">
+    <div class="row">
+      <section class="box1 col-md-8 bg-light p-4 rounded mb-3">
         <h2>Mijn Projecten</h2>
         <h3>Projecten</h3>
         <h4>Mijn projecten die ik gemaakt heb zijn Hoger en lager, ZeeSlag en nu ben ik bezig met een website bouwen waar je computer part kan kopen.
           Ik ben ook bezig met keuzedeel daar maak ik een 3d doolhof horror game.
         </h4>
-       <img class="img" src="/img/Schermafbeelding 2025-03-03 135139.png" alt="">
-       <p>Een game waar je tegen een computer moet spelen en zijn boten moet vernietegen om te winnen</p>
-       <img class="img" src="/img/Schermafbeelding 2025-03-03 135231.png" alt="">
-       <p>een game waar je  hoger of lager kan gokken</p>
-       <img class="img" src="/img/Schermafbeelding 2025-04-03 141822.png" alt="">
+        <div class="row">
+          <div class="col-6 mb-3" > <a href="https://github.com/RayenBisai/hogerlager.rayenbisai.git.io">
+            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135139.png" alt=""></a>
+            <p>Een game waar je tegen een computer moet spelen en zijn boten moet vernietegen om te winnen</p>
+          </div>
+          <div class="col-6 mb-3"> <a href="https://github.com/baamadu/Boter-kaas-en-eieren--Zeeslag-Whack-a-Mole-">
+            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135231.png" alt=""></a>
+            <p>een game waar je  hoger of lager kan gokken</p>
+          </div>
+          <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-project-p03-review-your-experience-shermaine-rayen-s-team">
+            <img class="img-fluid" src="/img/Schermafbeelding 2025-04-03 141822.png" alt=""></a>
+             <p>Een website waar je reviews kan plaatsen en producten kan kopen</p>
+          </div>
+          <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-p04-kdl-gp-game-eerie-escape">
+            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135139.png" alt=""></a>
+             <p>een game waar je  hoger of lager kan gokken</p>
+          </div>
+        </div>
       </section>
-      <section class="sidebar">
+      <aside class="col-md-4 bg-light p-4 rounded mb-3 border border-secondary">
         <h3>Mijn projecten:</h3>
-        <p>Hoger Lager, Zee slag en Review your experience</p>
-      </section>
+        <p><a href="https://github.com/RayenBisai/hogerlager.rayenbisai.git.io">Hoger Lager</a><p></p><a href="https://github.com/baamadu/Boter-kaas-en-eieren--Zeeslag-Whack-a-Mole-">Zee Slag</a><p><a href="https://github.com/ROCMondriaanTIN/sd24-project-p03-review-your-experience-shermaine-rayen-s-team">Review your experience</a></p><p><a href="https://github.com/ROCMondriaanTIN/sd24-p04-kdl-gp-game-eerie-escape">Eerie escape - keuzedeel game</a></p>
+      </aside>
+    </div>
   </main>
-  
-  <footer>
-    <p>&copy; 2025 Mijn Website</p>
+
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p class="mb-0">&copy; 2025 Mijn Website</p>
   </footer>
-  
+
   <script src="js/main.js"></script>
+  <!-- Bootstrap JS Bundle CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
