--- a/portofolio/about.html
+++ b/portofolio/about.html
@@ -4,43 +4,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Over mij</title>
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Over mij</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Over mij</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="Projecten.html">Projecten</a></li>
-      </ul>
-    </nav>
-  </header>
-  
-  <main>
-    <section class="content">
-      <h2>Wie ben ik?</h2>
-      <p class="about">Ik heb een sterke passie voor technologie en het ontwikkelen van innovatieve oplossingen met behulp van programmeren. Mijn projecten, waaronder het ontwerpen van games en het bouwen van een website, bieden mij aanzienlijke voldoening en inspireren mij om mijn kennis verder uit te breiden. Ik ben gefascineerd door het oplossen van problemen en het concretiseren van nieuwe ideeën. Door mijn opleiding tot softwareontwikkelaar streef ik ernaar mijn vaardigheden continu te verbeteren en meer projecten te realiseren. </p>
-    </section>
-    <section class="sidebar">
-      <h3>Mijn hobby's:</h3>
-      <ul>
-        <li>Manga lezen</li>
-        <li>Gamen</li>
-        <li>Coderen</li>
-      </ul>
-    </section>
-    <section class="content">
-     .
-    </section>
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Mijn Portofolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="about.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Projecten.html">Projecten</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container my-4">
+    <div class="row">
+      <section class="box1 col-md-8 bg-light p-4 rounded mb-3">
+        <h2>Wie ben ik?</h2>
+        <p>Ik heb een sterke passie voor technologie en het ontwikkelen van innovatieve oplossingen met behulp van programmeren. Mijn projecten, waaronder het ontwerpen van games en het bouwen van een website, bieden mij aanzienlijke voldoening en inspireren mij om mijn kennis verder uit te breiden. Ik ben gefascineerd door het oplossen van problemen en het concretiseren van nieuwe ideeën. Door mijn opleiding tot softwareontwikkelaar streef ik ernaar mijn vaardigheden continu te verbeteren en meer projecten te realiseren.</p>
+      </section>
+      <aside class="col-md-4 bg-light p-4 rounded mb-3 border border-secondary">
+        <h3>Mijn hobby's:</h3>
+        <ul>
+          <li>Manga lezen</li>
+          <li>Gamen</li>
+          <li>Coderen</li>
+        </ul>
+      </aside>
+    </div>
   </main>
-  
-  <footer>
-    <p>&copy; 2025 Mijn Website</p>
+
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p class="mb-0">&copy; 2025 Mijn Website</p>
   </footer>
-  
+
   <script src="js/main.js"></script>
+  <!-- Bootstrap JS Bundle CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
