--- a/portofolio/contact.html
+++ b/portofolio/contact.html
@@ -4,34 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mijn Website</title>
+  <!-- Bootstrap CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Contact</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Over mij</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="Projecten.html">Projecten</a></li>
-      </ul>
-    </nav>
-  </header>
-  <head class="iets"> </head>
-  <main class="full-width">
-    <section class="content">
-    <h2>Mijn contact Pagina</h2>
-    <h3>Je kan mij contacten op <a href="www.gmail.com">rayenbisai@gmail.com</a> of 0639204883.</h3>
+  <!-- Bootstrap Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Mijn Portofolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Projecten.html">Projecten</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-    </section>
+  <main class="container my-4">
+    <section class="box1 bg-light p-4 rounded">
+      <h2>Mijn contact Pagina</h2>
+      <h3>Je kan mij contacten op <a href="mailto:rayenbisai@gmail.com">rayenbisai@gmail.com</a> of 0639204883.</h3>
     </section>
   </main>
-  
-  <footer>
-    <p>&copy; 2025 Mijn Website</p>
+
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p class="mb-0">&copy; 2025 Mijn Website</p>
   </footer>
-  
+
   <script src="js/main.js"></script>
+  <!-- Bootstrap JS Bundle CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
