--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -4,33 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mijn Website</title>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Welkom op mijn Portofolio</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">Over mij</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="Projecten.html">Projecten</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="full-width">
-    <section class="content">
-      <h2>Mijn Portofolio</h2>
-      <h3>Motievatie</h3>
-      <p> Ik ben gepassioneerd door technologie en het creëren van nieuwe dingen met code. Mijn projecten, zoals het maken van games en het bouwen van een website, geven me veel voldoening en motivatie om door te leren. Ik vind het geweldig om problemen op te lossen en nieuwe ideeën werkelijkheid te maken. Door mijn opleiding als software developer wil ik mijn vaardigheden blijven verbeteren en meer projecten realiseren. </p>
-    </section>
+ 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">Mijn Portofolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Projecten.html">Projecten</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <main class="container my-4">
+    <div class="row justify-content-center">
+      <section class="box1 col-lg-10 col-md-12 bg-light p-5 rounded">
+        <h2>Mijn Portofolio</h2>
+        <h3>Motievatie</h3>
+        <p> Ik ben gepassioneerd door technologie en het creëren van nieuwe dingen met code. Mijn projecten, zoals het maken van games en het bouwen van een website, geven me veel voldoening en motivatie om door te leren. Ik vind het geweldig om problemen op te lossen en nieuwe ideeën werkelijkheid te maken. Door mijn opleiding als software developer wil ik mijn vaardigheden blijven verbeteren en meer projecten realiseren. </p>
+      </section>
+    </div>
   </main>
 
-  
-  <footer>
-    <p>&copy; 2025 Mijn Website</p>
+  <footer class="bg-dark text-white text-center py-3 fixed-bottom">
+    <p class="mb-0">&copy; 2025 Mijn Website</p>
   </footer>
-  
+
   <script src="js/main.js"></script>
+  <!-- Bootstrap JS Bundle CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
