added profile.html and resolved validation errors

--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Projecten.html">Projecten</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="profile.html">Profiel</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -45,20 +48,20 @@
         </h4>
         <div class="row">
           <div class="col-6 mb-3" > <a href="https://github.com/RayenBisai/hogerlager.rayenbisai.git.io">
-            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135139.png" alt=""></a>
+            <img class="img-fluid" src="/img/hogerlager.png" alt=""></a>
             <p>Een game waar je tegen een computer moet spelen en zijn boten moet vernietegen om te winnen</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/baamadu/Boter-kaas-en-eieren--Zeeslag-Whack-a-Mole-">
-            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135231.png" alt=""></a>
+            <img class="img-fluid" src="/img/zeeslag.png" alt=""></a>
             <p>een game waar je  hoger of lager kan gokken</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-project-p03-review-your-experience-shermaine-rayen-s-team">
-            <img class="img-fluid" src="/img/Schermafbeelding 2025-04-03 141822.png" alt=""></a>
+            <img class="img-fluid" src="/img/review.png" alt=""></a>
              <p>Een website waar je reviews kan plaatsen en producten kan kopen</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-p04-kdl-gp-game-eerie-escape">
-            <img class="img-fluid" src="/img/Schermafbeelding 2025-03-03 135139.png" alt=""></a>
-             <p>een game waar je  hoger of lager kan gokken</p>
+            <img class="img-fluid" src="/img/keuzedeel.png" alt="eerie escape"></a>
+             <p>Een game waar je puzzels moet doen en jumpsares krijgt bij bepaalde puzzels</p>
           </div>
         </div>
       </section>
