--- a/portofolio/contact.html
+++ b/portofolio/contact.html
@@ -30,6 +30,9 @@
           <li class="nav-item">
             <a class="nav-link" href="Projecten.html">Projecten</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="profile.html">Profiel</a>
+          </li>
         </ul>
       </div>
     </div>
