added text to projecten.html

--- a/portofolio/about.html
+++ b/portofolio/about.html
@@ -41,7 +41,7 @@
         <h2>Wie ben ik?</h2>
         <p>Ik heb een sterke passie voor technologie en het ontwikkelen van innovatieve oplossingen met behulp van programmeren. Mijn projecten, waaronder het ontwerpen van games en het bouwen van een website, bieden mij aanzienlijke voldoening en inspireren mij om mijn kennis verder uit te breiden. Ik ben gefascineerd door het oplossen van problemen en het concretiseren van nieuwe ideeën. Door mijn opleiding tot softwareontwikkelaar streef ik ernaar mijn vaardigheden continu te verbeteren en meer projecten te realiseren.</p>
       </section>
-      <aside class="col-md-4 bg-light p-4 rounded mb-3 border border-secondary">
+      <aside class="col-md-4 col-lg-3 bg-light p-4 rounded mb-3 border border-secondary">
         <h3>Mijn hobby's:</h3>
         <ul>
           <li>Manga lezen</li>
