--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -49,19 +49,27 @@
         <div class="row">
           <div class="col-6 mb-3" > <a href="https://github.com/RayenBisai/hogerlager.rayenbisai.git.io">
             <img class="img-fluid" src="/img/hogerlager.png" alt=""></a>
+           <h4>Hoger Lager</h4>
             <p>Een game waar je tegen een computer moet spelen en zijn boten moet vernietegen om te winnen</p>
+            <p>Ik heb html, css en javascript gebruikt</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/baamadu/Boter-kaas-en-eieren--Zeeslag-Whack-a-Mole-">
             <img class="img-fluid" src="/img/zeeslag.png" alt=""></a>
+         <h4>Zee Slag</h4>
             <p>een game waar je  hoger of lager kan gokken</p>
+            <p>Ik heb html, css en javascript gebruikt</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-project-p03-review-your-experience-shermaine-rayen-s-team">
             <img class="img-fluid" src="/img/review.png" alt=""></a>
+            <h4>Review your experiece</h4>
              <p>Een website waar je reviews kan plaatsen en producten kan kopen</p>
+             <p>ik heb html, php, css, bootstrap en javascript gebruikt</p>
           </div>
           <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-p04-kdl-gp-game-eerie-escape">
             <img class="img-fluid" src="/img/keuzedeel.png" alt="eerie escape"></a>
+            <h4>Eerie escape</h4>
              <p>Een game waar je puzzels moet doen en jumpsares krijgt bij bepaalde puzzels</p>
+             <p>ik heb godot engine en GD Script gebruikt</p>
           </div>
         </div>
       </section>
