fixed the footer

--- a/portofolio/Projecten.html
+++ b/portofolio/Projecten.html
@@ -68,7 +68,7 @@
           <div class="col-6 mb-3"> <a href="https://github.com/ROCMondriaanTIN/sd24-p04-kdl-gp-game-eerie-escape">
             <img class="img-fluid" src="/img/keuzedeel.png" alt="eerie escape"></a>
             <h4>Eerie escape</h4>
-             <p>Een game waar je puzzels moet doen en jumpsares krijgt bij bepaalde puzzels</p>
+             <p>Een game waar je puzzels moet doen en jumpsares krijgt bij bepaalde puzzels.</p>
              <p>ik heb godot engine en GD Script gebruikt</p>
           </div>
         </div>
